arranged gitmodules again

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,33 +1,33 @@
-[submodule "modules/tftp"]
+[submodule "tftp"]
 	path = modules/modules/tftp
 	url = https://github.com/theforeman/puppet-tftp.git
-[submodule "modules/apache"]
+[submodule "apache"]
 	path = modules/apache
 	url = https://github.com/theforeman/puppet-apache.git
-[submodule "modules/foreman"]
+[submodule "foreman"]
 	path = modules/foreman
 	url = https://github.com/theforeman/puppet-foreman.git
-[submodule "modules/foreman_proxy"]
+[submodule "foreman_proxy"]
 	path = modules/foreman_proxy
 	url = https://github.com/theforeman/puppet-foreman_proxy.git
-[submodule "modules/passenger"]
+[submodule "passenger"]
 	path = modules/passenger
 	url = https://github.com/theforeman/puppet-passenger.git
-[submodule "modules/puppet"]
+[submodule "puppet"]
 	path = modules/puppet
 	url = https://github.com/theforeman/puppet-puppet.git
-[submodule "modules/xinetd"]
+[submodule "xinetd"]
 	path = modules/xinetd
 	url = https://github.com/theforeman/puppet-xinetd.git
-[submodule "modules/git"]
+[submodule "git"]
 	path = modules/git
 	url = https://github.com/theforeman/puppet-git.git
-[submodule "modules/dhcp"]
+[submodule "dhcp"]
 	path = modules/dhcp
 	url = https://github.com/theforeman/puppet-dhcp
-[submodule "modules/dns"]
+[submodule "dns"]
 	path = modules/dns
 	url = https://github.com/theforeman/puppet-dns
-[submodule "modules/concat"]
+[submodule "concat"]
 	path = modules/concat
 	url = https://github.com/theforeman/puppet-concat
