--- a/.gitmodules
+++ b/.gitmodules
@@ -1,33 +1,30 @@
-[submodule "tftp"]
-	path = modules/tftp
-	url = https://github.com/theforeman/puppet-tftp.git
-[submodule "apache"]
+[submodule "modules/apache"]
 	path = modules/apache
 	url = https://github.com/theforeman/puppet-apache.git
-[submodule "foreman"]
+[submodule "modules/concat"]
+	path = modules/concat
+	url = https://github.com/theforeman/puppet-concat.git
+[submodule "modules/dhcp"]
+	path = modules/dhcp
+	url = https://github.com/theforeman/puppet-dhcp.git
+[submodule "modules/dns"]
+	path = modules/dns
+	url = https://github.com/theforeman/puppet-dns.git
+[submodule "modules/foreman"]
 	path = modules/foreman
 	url = https://github.com/theforeman/puppet-foreman.git
-[submodule "foreman_proxy"]
+[submodule "modules/foreman_proxy"]
 	path = modules/foreman_proxy
 	url = https://github.com/theforeman/puppet-foreman_proxy.git
-[submodule "passenger"]
-	path = modules/passenger
-	url = https://github.com/theforeman/puppet-passenger.git
-[submodule "puppet"]
-	path = modules/puppet
-	url = https://github.com/theforeman/puppet-puppet.git
-[submodule "xinetd"]
-	path = modules/xinetd
-	url = https://github.com/theforeman/puppet-xinetd.git
-[submodule "git"]
+[submodule "modules/git"]
 	path = modules/git
 	url = https://github.com/theforeman/puppet-git.git
-[submodule "dhcp"]
-	path = modules/dhcp
-	url = https://github.com/theforeman/puppet-dhcp
-[submodule "dns"]
-	path = modules/dns
-	url = https://github.com/theforeman/puppet-dns
-[submodule "concat"]
-	path = modules/concat
-	url = https://github.com/theforeman/puppet-concat
+[submodule "modules/passenger"]
+	path = modules/passenger
+	url = https://github.com/theforeman/puppet-passenger.git
+[submodule "modules/puppet"]
+	path = modules/puppet
+	url = https://github.com/theforeman/puppet-puppet.git
+[submodule "modules/xinetd"]
+	path = modules/xinetd
+	url = https://github.com/theforeman/puppet-xinetd.git
